# virto

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile.api  Dockerfile.console  Makefile  README.md  TESTING.md  TESTING_SETUP_SUMMARY.md  docker-compose.yml  fly.api.toml  fly.console.toml  pyproject.toml  pytest.ini  render.yaml  requirements.txt  virtual_ai_organization_research_investigation_plan.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  docker-publish.yml  fly-deploy.yml  test.yml
alembic/: env.py
alembic/versions/: 20251001_0001_init.py  20251001_0002_auth_usage_s3.py  20251001_0003_roles_runlogs.py
console/: index.html  package-lock.json  package.json  vitest.config.ts
console/coverage/: App.tsx.html  Login.tsx.html  RunLogs.tsx.html  Sprint.tsx.html  api.ts.html  coverage-final.json  index.html  main.tsx.html
console/src/: App.tsx  Login.tsx  RunLogs.tsx  Sprint.tsx  api.ts
console/src/tests/: Login.test.tsx  api.test.ts  setup.ts
docs/: HOWTO.md
docs/adr/: 000-template.md  001-orchestration.md
governance/: constitution.md  policies.yaml
meetings/templates/: allhands.md  brainstorm.md  standup.md
personas/: ceo_prod_v1.json  cto_core_v1.json  cxo_design_v1.json
schemas/: hiring_plan.schema.json  persona.schema.json
scripts/: run_tests.sh
src/: app.py
src/db/: __init__.py  models.py
src/orchestration/: autogen_loop.py  crewai_adapter.py  dag.py  flows.py  langgraph_adapter.py  markdown.py
src/services/: auth.py  auth_rbac.py  event_stream.py  linear_client.py  llm_provider.py  notion_client.py  policy.py  usage_logger.py
src/utils/: io.py  s3.py  store.py
tests/: conftest.py  test_approvals.py  test_auth.py  test_orchestration.py  test_rbac.py  test_services.py
