[project]
name = "virtual-ai-org"
version = "0.5.0"
description = "A production-ready framework for building and operating virtual organizations staffed by AI agents"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}

dependencies = [
    "fastapi>=0.111.0",
    "uvicorn>=0.30.5",
    "pydantic>=2.8.2",
    "python-dotenv>=1.0.1",
    "httpx>=0.27.0",
    "pyyaml>=6.0.2",
    "sqlalchemy>=2.0.34",
    "psycopg>=3.2.1",
    "alembic>=1.13.2",
    "passlib[bcrypt]>=1.7.4",
    "pyjwt>=2.9.0",
    "boto3>=1.35.28",
    "sse-starlette>=2.1.0",
    "redis>=5.0.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
]
